Agregado del diseño responsive del sobrefoot del main

--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
 
 
     <div class="body_sobrefoot">
-        <div class="tsobref">
-            <h2>Gana un descuento del 5% en CUALQUIER producto</h2>
-        </div>
-        <div class="xsobref">
-            <p>Suscribite a nuestras actualizaciones semanales si queres recibir <br> los mejores beneficios solo para vos!!</p>
+        <div class="bsf_text">
+            <div class="tsobref">
+                <h2>Gana un descuento del 5% en CUALQUIER producto</h2>
+            </div>
+            <div class="xsobref">
+                <p>Suscribite a nuestras actualizaciones semanales si queres recibir los mejores beneficios solo para vos!!</p>
+            </div>
         </div>
         <div class="subscription">
             <form action="">
