--- a/temporal.html
+++ b/temporal.html
@@ -88,18 +88,55 @@
         <div class="text-overlay2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias illo reiciendis velit ad cupiditate repellendus!</div>
         <button class="bot1">Todos los Productos</button>
         <button class="bot2">Rebajas</button>
-
     </div>
 
 
-    <div>
-        <h1>Contenido principal</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, maiores a accusantium, voluptatem quia doloribus neque quo unde omnis consectetur explicabo hic corporis nihil laboriosam recusandae ipsa? Commodi, ipsa perferendis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati explicabo optio quae soluta numquam repellat vel laborum sequi error culpa. Dignissimos quisquam debitis quidem repellendus praesentium sed iusto et neque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia minus tempora asperiores quod alias, blanditiis nobis. Nostrum explicabo, aperiam nesciunt rem corporis cum numquam. Dolorem repudiandae deleniti nihil excepturi hic.
-        Voluptatum esse inventore velit pariatur aliquam dolorem praesentium ad. Impedit cupiditate cumque, corporis natus inventore eius, accusamus magnam, neque velit suscipit saepe incidunt? Explicabo molestiae veritatis perferendis repellat, corporis libero.
-        Accusantium iure iste, veritatis praesentium, voluptates asperiores illum consequuntur totam id ipsam quaerat alias qui, quos quia perspiciatis sapiente. Ut necessitatibus asperiores error eos recusandae odit veniam repudiandae. Non, voluptates.
-        Eaque omnis ex velit odit fugiat nam! Quae ab, laborum dolores obcaecati cumque accusamus labore nulla doloremque, unde, iste reiciendis vel corrupti. Nihil laboriosam, consectetur impedit distinctio earum omnis in.
-        Nulla optio eos quisquam a, quod laudantium blanditiis. Autem neque doloribus labore optio harum obcaecati ea qui temporibus, nulla soluta aliquam in, fuga suscipit hic quaerat voluptates dolore quo deleniti.</p>
-    </div>
+    <div class="tarjetero row row-cols-1 row-cols-md-2 g-2 p-0">
+        <div class="col">
+          <div class="card">
+            <div class="card-img-container">
+                <img src="assets/img/Remerones Oversize/REMERA OVERSIZE MOON BEIGE.png" class="card-img-top" alt="Remeron_card_img">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Remerones Oversize</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-img-container">
+                <img src="assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top" alt="Musculosa_card_img">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Musculosas Oversize</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-img-container">
+                <img src="assets/img/Camisa_hombre2.jpg" class="card-img-top" alt="Camisa_card_img">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Camisas de Fibrana</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-img-container">
+                <img src="assets/img/bermuda_card.jpg" class="card-img-top" alt="Bermuda_card_img">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Bermudas</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+      </div>
     <hr>
     <!-- -->
     <div>
