Agregado de vinculo de la pagina del item a los cards del index y ajustes de estilos del template contacto

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
 
     <div class="tarjetero row row-cols-1 row-cols-md-2 g-2 p-0">
+        <a href="templates/item.html">
         <div class="col">
           <div class="card">
             <div class="card-img-container">
@@ -103,7 +104,9 @@
             </div>
           </div>
         </div>
+        </a>
         <div class="col">
+            <a href="templates/item.html">
           <div class="card">
             <div class="card-img-container">
                 <img src="assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top" alt="Musculosa_card_img">
@@ -113,8 +116,11 @@
               <p class="card-text"></p>
             </div>
           </div>
+        </a>
         </div>
+    
         <div class="col">
+            <a href="templates/item.html"></a>
           <div class="card">
             <div class="card-img-container">
                 <img src="assets/img/Camisa_hombre2.jpg" class="card-img-top" alt="Camisa_card_img">
@@ -124,8 +130,11 @@
               <p class="card-text"></p>
             </div>
           </div>
+        </a>
         </div>
+        
         <div class="col">
+            <a href="templates/item.html">
           <div class="card">
             <div class="card-img-container">
                 <img src="assets/img/bermuda_card.jpg" class="card-img-top" alt="Bermuda_card_img">
@@ -135,6 +144,7 @@
               <p class="card-text"></p>
             </div>
           </div>
+        </a>
         </div>
       </div>
     <hr>
