--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           </div>
         </div>
         </a>
+        
         <div class="col">
             <a href="templates/item.html">
           <div class="card">
@@ -120,7 +121,7 @@
         </div>
     
         <div class="col">
-            <a href="templates/item.html"></a>
+            <a href="templates/item.html">
           <div class="card">
             <div class="card-img-container">
                 <img src="assets/img/Camisa_hombre2.jpg" class="card-img-top" alt="Camisa_card_img">
