Agregado de aalgunas animaciones y finalizacion preliminar del index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="big_navbar">
             <div class="fl_bar">
-                <p>Envíos a todo el país!!!</p>
+                <marquee><p>Envíos a todo el país!!!</p></marquee>
             </div>
             <hr>
             <div class="mid_head">
@@ -85,9 +85,14 @@
     <div class="holder">
         <video src="assets/vid/carousell.mp4" autoplay muted loop></video>
         <div class="text-overlay1">De la web a tu casa, en un solo Click</div>
-        <div class="text-overlay2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias illo reiciendis velit ad cupiditate repellendus!</div>
+        <div class="text-overlay2">Contamos con variedad de productos en stock para que puedas tenerlo lo antes posible!!!</div>
         <button class="bot1">Todos los Productos</button>
         <button class="bot2">Rebajas</button>
+    </div>
+
+    <!--  -->
+    <div class="titular-body-index">
+        <h1>Completa todos tus looks con Crossover </h1>
     </div>
 
     <!-- Tarjetero de categorias de ropa de la pagina -->
@@ -148,23 +153,6 @@
             </a>
         </div>
       </div>
-
-    <hr>
-    <!-- -->
-    <div>
-        <h2>Contenido nivel2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo nostrum ex fugit esse natus officiis voluptatem obcaecati. Rem quas vel enim aut rerum, quam quae quaerat voluptas assumenda laudantium hic?
-        Ex, odio eius. Repellendus labore dolor delectus, facere neque totam consequuntur quidem iusto reiciendis eos sapiente, doloribus cumque quaerat quibusdam saepe inventore a nobis nisi veniam, dolorem itaque aliquam veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellendus excepturi at, voluptatem impedit vitae, ad mollitia accusamus a doloribus, dolorum voluptatibus ullam suscipit. Ipsa neque dolore sint error quam!
-        Excepturi alias cum consequuntur, nostrum sint tempore? Fugiat repellat excepturi magnam unde quas dignissimos? Nulla sit, veritatis obcaecati dolores doloremque est, expedita ab iure vel ad eum atque minima placeat!
-        Et nesciunt vitae minus. Nulla placeat illo natus aperiam vitae ad quam atque qui pariatur impedit. Praesentium nihil aut voluptate ipsum rem eius nam repudiandae nemo? Aliquam modi repellat enim.
-        Alias aspernatur, eaque aut repellat itaque doloribus fuga libero autem sunt dolorem corrupti dolore. Ad ut, voluptate dolor magnam cum commodi numquam, dignissimos voluptatem, qui aspernatur tempora. Ut, voluptatibus et.
-        Maiores, assumenda? Ipsam deserunt velit molestias. Expedita blanditiis fugit voluptate itaque vel exercitationem aspernatur, ipsa commodi, ad optio consequatur cumque. At non quidem iusto voluptatibus unde praesentium dignissimos ratione totam.
-        Eos, sapiente. Porro pariatur ullam provident quos aut unde aperiam harum consequatur, inventore exercitationem asperiores nobis itaque. Autem, culpa nihil excepturi corrupti modi saepe quo molestiae neque impedit eius error?
-        Corrupti similique, iste sunt nemo autem maxime non quia. Ea, sint cumque pariatur, soluta unde ipsum consequuntur molestiae quo perferendis iure excepturi natus et placeat nobis sunt? Consequuntur, voluptas soluta.
-        Illum nisi beatae minus sapiente cupiditate, quos animi alias. Id laboriosam, porro ex ea sint velit quaerat delectus consequatur unde commodi veritatis, expedita suscipit eum dolorem aut, dolore vel modi!
-        Temporibus quod pariatur placeat adipisci qui esse ipsa voluptate nisi, neque distinctio est at libero laborum beatae ad facilis corrupti quos, sapiente rem eos ab, impedit repellendus quia? Sequi, quae.
-        Provident doloribus, nisi adipisci recusandae quibusdam, maxime aut dignissimos optio earum illo quia quasi sit nihil reiciendis officia iure eos dolor culpa libero? Vitae accusantium quidem nemo, ab eos rem.</p>
-    </div>
 
     <!-- Elemento sobre el pie de pagina que habilita la subscripcion por email -->
     <div class="body_sobrefoot">
