Agregado de imagen, mejorado de imagenes con upscaled IA y correccion de estilos de la barra sobre las cards en el index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!--  -->
     <div class="titular-body-index">
-        <h1>Completa todos tus looks con Crossover </h1>
+        <h1><i class="fa-solid fa-angles-down"></i>Completa todos tus looks<i class="fa-solid fa-angles-down"></i></h1>
     </div>
 
     <!-- Tarjetero de categorias de ropa de la pagina -->
@@ -101,7 +101,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-img-container">
-                        <img src="assets/img/Remerones Oversize/REMERA OVERSIZE MOON BEIGE.png" class="card-img-top" alt="Remeron_card_img">
+                        <img src="assets/img/Remerones Oversize/remeron_card.png" class="card-img-top" alt="Remeron_card_img">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Remerones Oversize</h5>
@@ -115,7 +115,7 @@
             <a href="templates/item.html">
                 <div class="card">
                     <div class="card-img-container">
-                        <img src="assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top" alt="Musculosa_card_img">
+                        <img src="assets/img/Musculosa Oversize/musculosa_card.png" class="card-img-top" alt="Musculosa_card_img">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Musculosas Oversize</h5>
@@ -143,7 +143,7 @@
             <a href="templates/item.html">
                 <div class="card">
                     <div class="card-img-container">
-                        <img src="assets/img/bermuda_card.jpg" class="card-img-top" alt="Bermuda_card_img">
+                        <img src="assets/img/Bermudas/Bermuda de jean.png" class="card-img-top" alt="Bermuda_card_img">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Bermudas</h5>
