Agregado de diseño responsive en el titular del body del index

--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
         <button class="bot2">Rebajas</button>
     </div>
 
-    <!--  -->
+    <!-- Separador del tarjetero con el holder -->
     <div class="titular-body-index">
         <h1><i class="fa-solid fa-angles-down"></i>Completa todos tus looks<i class="fa-solid fa-angles-down"></i></h1>
+    </div>
+    <div class="separador-titular-small">
+        <h1><i class="fa-solid fa-angles-down"></i><i class="fa-solid fa-angles-down"></i><i class="fa-solid fa-angles-down"></i></h1>
     </div>
 
     <!-- Tarjetero de categorias de ropa de la pagina -->
