Agregado del template faq y actualizacion de todos los templates con dicho link a la pagina faq

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="big_navbar">
             <div class="fl_bar">
-                <marquee><p>Envíos a todo el país!!!</p></marquee>
+                <marquee loop="infinite"><p>Envíos a todo el país!!!</p></marquee>
             </div>
             <hr>
             <div class="mid_head">
@@ -191,9 +191,9 @@
             <div class="sec_foot">
                 <h3>Información y Preguntas Frecuentes</h3>
                 <ul class="sublinks_1">
-                    <li><a href="">Devoluciones</a></li>
-                    <li><a href="">Métodos de Pago</a></li>
-                    <li><a href="">Métodos de Envío</a></li>
+                    <li><a href="templates/faq.html">Devoluciones</a></li>
+                    <li><a href="templates/faq.html">Métodos de Pago</a></li>
+                    <li><a href="templates/faq.html">Métodos de Envío</a></li>
                 </ul>
             </div>
     
