Correccion de links en el index

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- Tarjetero de categorias de ropa de la pagina -->
     <div class="tarjetero row row-cols-1 row-cols-md-2 g-2 p-0">
-        <a href="templates/item.html">
+        <a href="templates/productos.html">
             <div class="col">
                 <div class="card">
                     <div class="card-img-container">
@@ -115,7 +115,7 @@
         </a>
         
         <div class="col">
-            <a href="templates/item.html">
+            <a href="templates/productos.html">
                 <div class="card">
                     <div class="card-img-container">
                         <img src="assets/img/Musculosa Oversize/musculosa_card.png" class="card-img-top" alt="Musculosa_card_img">
@@ -129,7 +129,7 @@
         </div>
 
         <div class="col">
-            <a href="templates/item.html">
+            <a href="templates/productos.html">
                 <div class="card">
                     <div class="card-img-container">
                         <img src="assets/img/Camisa_hombre2.jpg" class="card-img-top" alt="Camisa_card_img">
@@ -143,7 +143,7 @@
         </div>
         
         <div class="col">
-            <a href="templates/item.html">
+            <a href="templates/productos.html">
                 <div class="card">
                     <div class="card-img-container">
                         <img src="assets/img/Bermudas/Bermuda de jean.png" class="card-img-top" alt="Bermuda_card_img">
