Correccion de linkeo de l apagina de contacto

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <ul>
                         <li><a><div class="logonav"><img src="assets/img/logo.jpg" alt=""></div></a></li>
                         <li><a href="templates/productos.html">Productos</a></li>
-                        <li><a href="templates/rebajas.html">Rebajas</a></li>
+                        <!-- <li><a href="templates/rebajas.html">Rebajas</a></li>
                         <li><a href="templates/verano.html">Verano</a></li>
-                        <li><a href="templates/novedades.html">Novedades</a></li>
+                        <li><a href="templates/novedades.html">Novedades</a></li>-->
                         <li><a href="templates/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -65,9 +65,9 @@
                     <div class="links_small_navbar">
                         <ul>
                             <li><a href="templates/productos.html">Productos</a></li>
-                            <li><a href="templates/rebajas.html">Rebajas</a></li>
+                            <!-- <li><a href="templates/rebajas.html">Rebajas</a></li>
                             <li><a href="templates/verano.html">Verano</a></li>
-                            <li><a href="templates/novedades.html">Novedades</a></li>
+                            <li><a href="templates/novedades.html">Novedades</a></li>-->
                             <li><a href="templates/contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -180,7 +180,7 @@
         <div class="topper-foot">
             <div class="fir_foot">
                 <h3>¿Necesitas Ayuda?</h3>
-                <button><a href="contacto.html">Contáctanos</a></button>
+                <button><a href="templates/contacto.html">Contáctanos</a></button>
                 <div class="social-links">
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
