Agregado de position sticky al navbar responsive y separacion de estilos scss en mixins

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
                                 <div class="logonav"><img src="assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <li><a href="templates/productos.html">Productos</a></li>
-                        <!-- <li><a href="templates/rebajas.html">Rebajas</a></li>
-                        <li><a href="templates/verano.html">Verano</a></li>
-                        <li><a href="templates/novedades.html">Novedades</a></li>-->
                         <li><a href="templates/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -55,7 +52,7 @@
     </header>
 
     <!-- Nav responsive (para tamaño sm) -->
-    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
@@ -76,9 +73,6 @@
                     <div class="links_small_navbar">
                         <ul>
                             <li><a href="templates/productos.html">Productos</a></li>
-                            <!-- <li><a href="templates/rebajas.html">Rebajas</a></li>
-                            <li><a href="templates/verano.html">Verano</a></li>
-                            <li><a href="templates/novedades.html">Novedades</a></li>-->
                             <li><a href="templates/contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -172,6 +166,8 @@
             </a>
         </div>
     </div>
+    </div>
+
 
     <!-- Elemento sobre el pie de pagina que habilita la subscripcion por email -->
     <div class="body_sobrefoot">
@@ -191,6 +187,7 @@
             </form>
         </div>
     </div>
+
 
     <!-- Pie de pagina con apartado de preguntas frecuentes y contacto -->
     <footer>
