--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra prendas de buena calidad y al mejor precio en Santa Fe, Argentina">
+    <meta name="keywords" content="Camisetas, Ropa, Algodon, Ofertas, Santa Fe, Shorts, Bermudas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
@@ -15,7 +17,7 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Crossover.sf Shop</title>
+    <title>Crossover.sf EShop</title>
 </head>
 
 <body>
@@ -75,6 +77,7 @@
                         <ul>
                             <li><a href="templates/productos.html">Productos</a></li>
                             <li><a href="templates/contacto.html">Contacto</a></li>
+                            <li><a href="templates/carrito.html">Carrito</a></li>
                         </ul>
                     </div>
                     <div class="search-box">
