Correccion de linkeo del carrito en la version responsive del index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <ul>
                             <li><a href="templates/productos.html">Productos</a></li>
                             <li><a href="templates/contacto.html">Contacto</a></li>
-                            <li><a href="carrito.html">Carrito</a></li>
+                            <li><a href="templates/carrito.html">Carrito</a></li>
                         </ul>
                     </div>
                     <div class="search-box">
