Correccion de estilos en la pagina de productos

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 </div>
                 <form class="search-box" action="/buscar" method="get">
                     <input name="buscar" placeholder="Shorts, Camisetas basicas..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                            style="color: #ffffff;"></i></button>
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                 </form>
             </div>
             <div class="abajo">
@@ -84,8 +83,7 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="" name="buscar" placeholder="Shorts" />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                                    style="color: #ffffff;"></i></button>
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                         </form>
                     </div>
                 </div>
