--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
                 <div class="nombre_head">
                     <p>Crossover.sf</p>
                 </div>
-                <form class="search-box" action="/buscar" method="get">
-                    <input name="buscar" placeholder="Shorts, Camisetas basicas..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
-                </form>
+                <div class="buttons-nav">
+                    <form class="search-box" action="/buscar" method="get">
+                        <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
+                        <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
+                    </form>
+                    <button type="button" class="btn btn-primary position-relative color-btn carrito-btn"
+                        onclick="window.location.href='templates/carrito.html'">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span
+                            class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                            <span class="visually-hidden">New alerts</span>
+                        </span>
+                    </button>
+                </div>
             </div>
             <div class="abajo">
                 <nav class="bot_head">
@@ -60,11 +70,22 @@
             <div class="nombre_head">
                 <p>Crossover.sf</p>
             </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class="buttons-nav">
+                <button type="button" class="btn btn-primary position-relative"
+                    onclick="window.location.href='templates/carrito.html'">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span
+                        class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                        <span class="visually-hidden">New alerts</span>
+                    </span>
+                </button>
+                <!-- Botón para abrir el menú lateral en pantallas pequeñas -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
@@ -111,24 +132,24 @@
 
     <!-- Tarjetero de categorias de ropa de la pagina -->
     <div class="tarjetero row row-cols-1 row-cols-md-2 g-2 p-0"">
-        <a href="templates/productos.html">
-            <div class="col">
-                <div class="card" data-aos="zoom-in-right">
-                    <div class="card-img-container">
-                        <img src="assets/img/Remerones Oversize/remeron_card.png" class="card-img-top"
-                            alt="Remeron_card_img">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Remerones Oversize</h5>
-                        <p class="card-text"></p>
-                    </div>
+        <a href=" templates/productos.html">
+        <div class="col">
+            <div class="card" data-aos="zoom-in-right">
+                <div class="card-img-container">
+                    <img src="assets/img/Remerones Oversize/remeron_card.png" class="card-img-top"
+                        alt="Remeron_card_img">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Remerones Oversize</h5>
+                    <p class="card-text"></p>
                 </div>
             </div>
+        </div>
         </a>
 
         <div class="col">
             <a href="templates/productos.html">
-                <div class="card"  data-aos="zoom-in-left">
+                <div class="card" data-aos="zoom-in-left">
                     <div class="card-img-container">
                         <img src="assets/img/Musculosa Oversize/musculosa_card.png" class="card-img-top"
                             alt="Musculosa_card_img">
@@ -157,7 +178,7 @@
 
         <div class="col">
             <a href="templates/productos.html">
-                <div class="card"  data-aos="zoom-in-left">
+                <div class="card" data-aos="zoom-in-left">
                     <div class="card-img-container">
                         <img src="assets/img/Bermudas/Bermuda de jean.png" class="card-img-top" alt="Bermuda_card_img">
                     </div>
@@ -239,12 +260,12 @@
             easing: 'ease-in-out', // Efecto de suavizado
         });
     </script>
-    
+
     <!-- importaciones JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
