Agregado de autocompletar a formulario de suscripcion mail

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
         <div class="subscription">
             <form action="">
-                <input type="email" placeholder="Ingresa tu e-mail" for="email">
+                <input type="email" placeholder="Ingresa tu e-mail" for="email" autocomplete="email" id="email">
                 <input type="submit" value="Enviar">
             </form>
         </div>
