--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encuentra prendas de buena calidad y al mejor precio en Santa Fe, Argentina">
+    <meta name="description" content="Encuentra prendas de buena calidad y al mejor precio en Santa Fe, Argentina"> <!-- Descripcion del sitio y palabras clave -->
     <meta name="keywords" content="Camisetas, Ropa, Algodon, Ofertas, Santa Fe, Shorts, Bermudas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
