Actualizacion de linkeos del codigo y agregado de favicon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" href="assets/img/logo.jpg">
+
     <title>Crossover.sf EShop</title>
 </head>
 
@@ -117,8 +119,8 @@
         <div class="text-overlay1">De la web a tu casa, en un solo Click</div>
         <div class="text-overlay2">Contamos con variedad de productos en stock para que puedas tenerlo lo antes
             posible!!!</div>
-        <button class="bot1">Todos los Productos</button>
-        <button class="bot2">Rebajas</button>
+        <button class="bot1" onclick="window.location.href='templates/productos.html'">Todos los Productos</button>
+        <button class="bot2" onclick="window.location.href='templates/productos.html'">Rebajas</button>
     </div>
 
     <!-- Separador del tarjetero con el holder -->
@@ -222,7 +224,7 @@
                 <div class="social-links">
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
+                    <a href="https://wa.me/?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
                             class="fa-brands fa-whatsapp fa-2xl"></i></i></a>
                 </div>
             </div>
