--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encuentra prendas de buena calidad y al mejor precio en Santa Fe, Argentina"> <!-- Descripcion del sitio y palabras clave -->
+    <meta name="description" content="Encuentra prendas de buena calidad y al mejor precio en Santa Fe, Argentina">
+    <!-- Descripcion del sitio y palabras clave -->
     <meta name="keywords" content="Camisetas, Ropa, Algodon, Ofertas, Santa Fe, Shorts, Bermudas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,9 +27,7 @@
     <header>
         <div class="big_navbar">
             <div class="fl_bar">
-                <marquee loop="infinite">
-                    <p>Envíos a todo el país!!!</p>
-                </marquee>
+                <p>Envíos a todo el país!!!</p>
             </div>
             <hr>
             <div class="mid_head">
@@ -37,8 +36,8 @@
                 </div>
                 <div class="buttons-nav">
                     <form class="search-box" action="/buscar" method="get">
-                        <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                        <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
+                        <input type="text" name="buscar" placeholder="Escribe aquí..." />
+                        <button type="submit"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                     </form>
                     <button type="button" class="btn btn-primary position-relative color-btn carrito-btn"
                         onclick="window.location.href='templates/carrito.html'">
@@ -54,7 +53,7 @@
                 <nav class="bot_head">
                     <ul>
                         <li><a>
-                                <div class="logonav"><img src="assets/img/logo.jpg" alt="logonav"></div>
+                                <div class="logonav"><img src="assets/img/logo.jpg" alt="logo crossover"></div>
                             </a></li>
                         <li><a href="templates/productos.html">Productos</a></li>
                         <li><a href="templates/contacto.html">Contacto</a></li>
@@ -106,7 +105,7 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="" name="buscar" placeholder="Shorts" />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
+                            <button type="submit"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                         </form>
                     </div>
                 </div>
